--- a/GalaxyInvaders/SpaceInvaders/SpaceInvaders/SpaceInvaders.csproj
+++ b/GalaxyInvaders/SpaceInvaders/SpaceInvaders/SpaceInvaders.csproj
@@ -121,6 +121,10 @@
     <Content Include="Assets\Images\play.png" />
     <Content Include="Assets\Images\scores.png" />
     <Content Include="Assets\Music\tetris.mp3" />
+    <Content Include="Assets\SplashScreen.scale-100.png" />
+    <Content Include="Assets\SplashScreen.scale-125.png" />
+    <Content Include="Assets\SplashScreen.scale-150.png" />
+    <Content Include="Assets\SplashScreen.scale-400.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
