--- a/GalaxyInvaders/SpaceInvaders/SpaceInvaders/SpaceInvaders.csproj
+++ b/GalaxyInvaders/SpaceInvaders/SpaceInvaders/SpaceInvaders.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Models\Class1.cs" />
     <Compile Include="Models\Disparo.cs" />
     <Compile Include="Models\NaveAmiga.cs" />
+    <Compile Include="Models\NaveEnemiga.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Score.xaml.cs">
       <DependentUpon>Score.xaml</DependentUpon>
