--- a/GalaxyInvaders/GalaxyInvaders/SpaceInvaders/SpaceInvaders.csproj
+++ b/GalaxyInvaders/GalaxyInvaders/SpaceInvaders/SpaceInvaders.csproj
@@ -105,6 +105,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\Disparo.cs" />
+    <Compile Include="Models\JugadorConDificultad.cs" />
     <Compile Include="Models\NaveAmiga.cs" />
     <Compile Include="Models\NaveEnemiga.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
